--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </ul>
     </nav>
     <button class="button">start tuning</button>
+    <p>Guitar Tuner</p>
     <img src="https://th.bing.com/th/id/R.f0166a3ff20294b6f9c6c6fd924aa42a?rik=3dFK6WfdG4ZfiQ&pid=ImgRaw&r=0" width="500px" height="500px">
     <footer>
         <div class="footer-col">
